--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -4,13 +4,13 @@
   <h3>Search Stocks</h3>
   <%= form_tag '#', method: :get do %>
     <div class="form-group row">
-      <div class="col-sm-9">
+      <div class="col-sm-9 no-right-padding">
         <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true,
                            class: "form-control form-control-large" %>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 no-left-padding">
         <%= button_tag type: :submit, class: "btn btn-success" do %>
-          <%= 'Search' %>
+          <span><i class="fas fa-search fa-lg"></i></span>
         <% end %>
       </div>
     </div>
