Update view and stocks_controller to display company name, ticker, price

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,12 +2,15 @@
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.search-area {
-  padding-top: 50px;
+.no-left-padding {
+  padding-left: 0 !important;
 }
 .no-right-padding {
   padding-right: 0 !important;
 }
-.no-left-padding {
-  padding-left: 0 !important;
+.results-block {
+  display: inline-block;
+}
+.search-area {
+  padding-top: 50px;
 }
