Cleaned up html search results to invalid AJAX responses.

--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -1,4 +1,6 @@
-<%= render 'shared/messages' %>
+<div class="results-block">
+  <%= render 'shared/messages' %>
+</div>
 
 <% if @stock %>
   <div class="card card-header results-block">
