--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -19,23 +19,6 @@
 <div id="results">
 
 </div>
-<div class="row col-9">
-  <table class="table table-bordered table-hover">
-    <thead>
-    <tr>
-      <th scope="col">Ticker</th>
-      <th scope="col">Name</th>
-      <th scope="col">Price</th>
-      <th scope="col">Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<% if !@tracked_stocks.empty? %>
+  <%= render 'stocks/list' %>
+<% end %>
